--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
     "next": "^16.0.8",
+    "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "rough-notation": "^0.5.1",
